[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/GFX/Items/springboardDown.png" type="Texture" id=1]
[ext_resource path="res://src/Items/BouncePad.gd" type="Script" id=2]
[ext_resource path="res://Assets/SFX/SoundEffects/Bouncepad3.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/GFX/Items/springboardUp.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 35, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 35, 9 )

[node name="BouncePad" type="StaticBody2D"]
collision_layer = 8
collision_mask = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="SpriteUp" type="Sprite" parent="."]
visible = false
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 9 )
shape = SubResource( 1 )

[node name="PlayerDetector" type="Area2D" parent="."]
position = Vector2( 0, -10 )
collision_layer = 0
collision_mask = 2
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
shape = SubResource( 2 )

[node name="BoostSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="ResetSprite" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="body_exited" from="PlayerDetector" to="." method="_on_PlayerDetector_body_exited"]
[connection signal="timeout" from="ResetSprite" to="." method="_on_ResetSprite_timeout"]
